# Myiq

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  README_ADDITIONAL_INSTRUCTIONS.md  README_GDPR.md  README_GUI.md  README_INSTALL_LEGAL.md  SECURITY.md  VERIFICATION_CHECKLIST.md  build_appimage.sh  build_standalone.sh  create_github_release.sh  create_portable_usb.sh  demo_portable_builds.sh  projekt_structure.txt  requirements.txt  start.sh
.github/: MANIFEST.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
A_rustscanner/: Cargo.toml  README.md
A_rustscanner/src/: main.rs
B_python_reader/: README.md
config/: case_policy.ini
docs/: API_REFERENCE.md  DPIA_template.md  GUI_SCANNER_GUIDE.md  OPERATORS_GUIDE.md  PORTABLE_DEPLOYMENT.md  QUICK_START.md  README.md  TESTING.md  TESTING_QUICKSTART.md  estate_case_flow.md  legal_readme.md
scripts/: analyze.sh  auto_case_setup.sh  create_probate_package.sh  doc_quality_check.py  encrypt_reports.sh  generate_training_pdf.sh  image_disk.sh  log_event.sh  package_for_legal.sh  package_for_legal_strict.sh  retention_manager.sh  run_doc_checks.sh  secure_delete.sh  sign_acknowledgement.sh  validate_case_before_packaging.sh  verify_integrity.sh
systemd/: crypto-retention.service  crypto-retention.timer
templates/: chain_of_custody.txt  client_acknowledgement_form.md  client_acknowledgement_form_fillable.txt  consent_form.txt  data_processing_agreement.md  data_processing_agreement.txt  expert_affidavit.md  (+5 more)
(+44 files in other folders)
