[package]
name = "rustscanner"
version = "0.1.0"
edition = "2021"
authors = ["Your Company <you@example.com>"]
description = "High-performance file/image scanner emitting JSONL hits for wallet-recovery workflows (PoC)."

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.7"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"
sha2 = "0.10"
anyhow = "1.0"